--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
   </section>  <!-- Gallery Section -->  <section id="gallery" class="max-w-5xl mx-auto px-6 py-12">
     <h3 class="text-2xl font-bold mb-6 text-center">Gallery</h3>
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
-      <img src="https://source.unsplash.com/featured/?coffee" class="rounded shadow" alt="Coffee" />
-      <img src="https://source.unsplash.com/featured/?cafe" class="rounded shadow" alt="Cafe" />
-      <img src="https://source.unsplash.com/featured/?espresso" class="rounded shadow" alt="Espresso" />
+      <img src="360_F_105907729_4RzHYsHJ2UFt5koUI19fc6VzyFPEjeXe.jpg" class="rounded shadow" alt="Coffee" />
+      <img src="empty-coffee-shop-interior-with-wooden-tables-coffee-maker-pastries-and-pendant-lights.jpg" class="rounded shadow" alt="Cafe" />
+      <img src="espresso-coffee-cup-with-beans-on-vintage-table.jpg" class="rounded shadow" alt="Espresso" />
     </div>
   </section>  <!-- Our Location Section -->  <section id="location" class="py-12 bg-white text-center">
     <h3 class="text-2xl font-bold mb-6">📍 Our Location</h3>
